--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <header id="header" ><div id="headerContent">Bienvenidos al Curso Diseño de Objetos Virtuales de Aprendizaje</div></header>
 <nav id="siteNav">
 <ul>
-   <li id="active"><a href="index.html" class="active no-ch main-node">¿Qué es un Objeto de Aprendizaje?</a></li>
+   <li id="active"><a href="index.html" class="active no-ch main-node">¿Qué es un Objeto Virtual de Aprendizaje?</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
@@ -35,7 +35,7 @@
 </div>
 <div id="main-wrapper">
 <section id="main">
-<header id="nodeDecoration"><h1 id="nodeTitle">¿Qué es un Objeto de Aprendizaje?</h1></header>
+<header id="nodeDecoration"><h1 id="nodeTitle">¿Qué es un Objeto Virtual de Aprendizaje?</h1></header>
 <article class="iDevice_wrapper textIdevice" id="id2">
 <div class="iDevice emphasis0" >
 <div id="ta2_108_2" class="block iDevice_content">
@@ -45,12 +45,12 @@
 </article>
 <article class="iDevice_wrapper interactive-videoIdevice em_iDevice" id="id0">
 <div class="iDevice emphasis1" >
-<header class="iDevice_header" style="background-image:url(icon_interactive.png)"><h1 class="iDeviceTitle">Objeto de Aprendizaje</h1></header>
+<header class="iDevice_header" style="background-image:url(icon_interactive.png)"><h1 class="iDeviceTitle">Objeto Virtual de Aprendizaje</h1></header>
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <div id="ta0_108_2" class="block iDevice_content">
-			<div class="exe-interactive-video">				<p id="exe-interactive-video-file" class="js-hidden">					<a href="https://www.youtube.com/watch?v=RrBDT-lSv8I&feature=emb_logo">com/watch?v=RrBDT-lSv8I&feature=emb_logo</a>				</p>				<script type="text/javascript">//<![CDATA[					
-var InteractiveVideo = {"slides":[{"type":"singleChoice","question":"<p>¿Cuáles son los elementos que constituyen a un Objeto de Aprendizaje?</p>","answers":[["Contenidos, Recursos de Aprendizajes y Objetivos de Contextualización",0],["Contenidos, Actividades de Aprendizaje y Elementos de Contextualización",1],["Objetivos de Contextualización y Contenidos de Aprendizaje",0]],"startTime":47}],"i18n":{"start":"Inicio","results":"Resultados","slide":"Diapositiva (fotograma)","score":"Puntuación","seen":"Visto","total":"Total","seeAll":"debe ver todo el contenido y contestar a las preguntas","noSlides":"El vídeo no tiene contenidos interactivos.","goOn":"Continuar","error":"Error","dataError":"Código no compatible","onlyOne":"Sólo un vídeo interactivo por página.","cover":"Portada","fsWarning":"Salga del modo pantalla completa (tecla Esc) para ver la diapositiva","right":"¡Correcto!","wrong":"Incorrecto","sortableListInstructions":"Pinche y arrastre o use las flechas.","up":"Subir","down":"Bajar","rightAnswer":"Respuesta correcta:","notAnswered":"Por favor termine la actividad","check":"Comprobar","newWindow":"Ventana nueva"}}				//]]></script>			</div>
+			<div class="exe-interactive-video">				<p id="exe-interactive-video-file" class="js-hidden">					<a href="https://www.youtube.com/watch?v=r30ld0w8R4s">com/watch?v=r30ld0w8R4s</a>				</p>				<script type="text/javascript">//<![CDATA[					
+var InteractiveVideo = {"slides":[{"type":"singleChoice","question":"<p>¿A qué se refiere la característica INTEROPERABLE?</p>","answers":[["A la posibilidad de ser actualizados, modificados o construidos  a partir del mismo.",0],["A ser visualizado y ejecutado en diferentes plataformas.",1],["A la capacidad de ser usado con diferentes propósitos educativos.",0],["A contar con buena vigencia de la información.",0]],"startTime":152}],"i18n":{"start":"Inicio","results":"Resultados","slide":"Diapositiva (fotograma)","score":"Puntuación","seen":"Visto","total":"Total","seeAll":"debe ver todo el contenido y contestar a las preguntas","noSlides":"El vídeo no tiene contenidos interactivos.","goOn":"Continuar","error":"Error","dataError":"Código no compatible","onlyOne":"Sólo un vídeo interactivo por página.","cover":"Portada","fsWarning":"Salga del modo pantalla completa (tecla Esc) para ver la diapositiva","right":"¡Correcto!","wrong":"Incorrecto","sortableListInstructions":"Pinche y arrastre o use las flechas.","up":"Subir","down":"Bajar","rightAnswer":"Respuesta correcta:","notAnswered":"Por favor termine la actividad","check":"Comprobar","newWindow":"Ventana nueva"}}				//]]></script>			</div>
 </div>
 </div>
 </div>
