--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <link rel="stylesheet" type="text/css" href="interactive-video.css" />
 <script type="text/javascript" src="interactive-video.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-	</head>
+</head>
 <body class="exe-web-site" id="exe-node-0"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
@@ -39,13 +39,23 @@
 <article class="iDevice_wrapper textIdevice" id="id2">
 <div class="iDevice emphasis0" >
 <div id="ta2_108_2" class="block iDevice_content">
-<div class="exe-text"><h4 style="text-align: justify;"><span style="color: #000000; font-size: 12pt;">El curso pretende ofrecerte conocimientos básicos de <b>DISEÑO INSTRUCCIONAL</b> para poner en práctica <span style="font-size: 14pt;"><strong><span style="color: #800000;">OBJETOS DE APRENDIZAJE</span> </strong></span>como estrategia de mediación didáctica para el fortalecimiento del quehacer pedagógico.</span></h4></div>
+<div class="exe-text"><div class="exe-layout-2-cols exe-layout-2-50-50 exe-clear">
+<div class="exe-col exe-col-1">
+<p><img src="ERIKA2.png" width="359" height="359" /></p>
+</div>
+<div class="exe-col exe-col-2">
+<p style="text-align: justify;"><span style="color: #000000; font-size: 12pt;">El curso pretende ofrecerles conocimientos básicos de <b>DISEÑO INSTRUCCIONAL</b> para poner en práctica <span style="font-size: 14pt;"><strong><span style="color: #800000;">OBJETOS DE APRENDIZAJE</span> </strong></span>como estrategia de mediación didáctica para el fortalecimiento del quehacer pedagógico.</span></p>
+<p style="text-align: justify;"><span style="color: #000000; font-size: 12pt;">Iniciamos el curso con <strong>¿Qué es un objeto Virtual de Aprendizaje?</strong></span></p>
+</div>
+</div>
+<p style="text-align: justify;"></p>
+<p style="text-align: justify;"></p></div>
 </div>
 </div>
 </article>
 <article class="iDevice_wrapper interactive-videoIdevice em_iDevice" id="id0">
 <div class="iDevice emphasis1" >
-<header class="iDevice_header" style="background-image:url(icon_interactive.png)"><h1 class="iDeviceTitle">Objeto Virtual de Aprendizaje</h1></header>
+<header class="iDevice_header" style="background-image:url(icon_objectives.gif)"><h1 class="iDeviceTitle">Objeto Virtual de Aprendizaje</h1></header>
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <div id="ta0_108_2" class="block iDevice_content">
@@ -67,4 +77,4 @@ var InteractiveVideo = {"slides":[{"type":"singleChoice","question":"<p>Una vez 
 </nav>
 </div>
 </div>
-<script type="text/javascript" src="_cedec_js.js"></script></body></html>
+<script type="text/javascript" src="_simplepoint_js.js"></script></body></html>
